# whirlwind

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
ext/: CMakeLists.txt
src/whirlwind/: __init__.py  _cost.py  _unwrap.py  carballo-pdf-0-spline.pkl  carballo-pdf-1-spline.pkl
src/whirlwind/_lib/: CMakeLists.txt  array.hpp  integrate_unwrapped_gradients.cpp  module.cpp  residue.cpp
src/whirlwind/graph/: CMakeLists.txt  __init__.py  _csr_graph.py  _dial.py  _dijkstra.py  _edge_list.py  _forest.py  _rectangular_grid_graph.py  csr_graph.cpp  dijkstra.cpp  iterable.hpp  module.cpp  rectangular_grid_graph.cpp  sequence.hpp
src/whirlwind/graph/_lib/: CMakeLists.txt  csr_graph.cpp  dial.cpp  dijkstra.cpp  edge_list.cpp  forest.cpp  graph.hpp  module.cpp  rectangular_grid_graph.cpp  shortest_path_forest.cpp
src/whirlwind/network/: CMakeLists.txt  __init__.py  _network.py  _primal_dual.py  _successive_shortest_paths.py  csr_graph.cpp  edge_list.cpp  graph.hpp  iterable.hpp  module.cpp  pair.hpp  rectangular_grid_graph.cpp  sequence.hpp
src/whirlwind/network/_lib/: CMakeLists.txt  capacity.hpp  module.cpp  network.cpp  primal_dual.cpp  residual_graph.cpp  successive_shortest_paths.cpp  uncapacitated.cpp  unit_capacity.cpp
src/whirlwind/spline/: __init__.py  _cubic_b_spline.py  _cubic_b_spline_2d.py  _cubic_b_spline_3d.py  _cubic_b_spline_basis.py
src/whirlwind/spline/_lib/: CMakeLists.txt  array.hpp  cubic_b_spline.cpp  cubic_b_spline_2d.cpp  cubic_b_spline_3d.cpp  cubic_b_spline_basis.cpp  module.cpp
